fix(inputs): fixed outline input without label misalignment

--- a/src/core/components/input/input-ios.less
+++ b/src/core/components/input/input-ios.less
@@ -109,6 +109,9 @@
       padding-bottom: 0px;
     }
     .item-input-wrap {
+      margin-top: 2px;
+    }
+    .item-title + .item-input-wrap {
       margin-top: -22px;
     }
 
